Fix placement of email taken message on mobile devices

--- a/src/components/SignUpPopup/SignUpPopup.css
+++ b/src/components/SignUpPopup/SignUpPopup.css
@@ -27,6 +27,6 @@
   }
 
   .popup-with-form__email-taken-message {
-    top: 187px;
+    top: 270px;
 }
 }
